# panda-api

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  fly.toml  justfile  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: build.yml  deploy_flyio.yml
app/: __main__.py  main.py
app/apps/core/: __init__.py
app/apps/core/controllers/: core.py  startup_down.py
app/apps/image_overlay/: __init__.py
app/apps/image_overlay/controllers/: __init__.py  image_overlay.py  qr.py
app/apps/image_overlay/models/: __init__.py  image_overlay.py  qr.py
app/routers/: main.py
app/routers/images/: images.py
